force-app/main/default/objects/malive__MALiveSummaryStateMileage__c/malive__MALiveSummaryStateMileage__c.object-meta.xml
<CustomObject>
    <label>MA Live Summary State Mileage</label>
    <nameField>
        <label>MA Live Asset State Mileage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MA Live Summary State Mileages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>