force-app/main/default/objects/malive__MALiveSummaryStateMileage__c/fields/malive__ReportDate__c.field-meta.xml
<CustomField>
    <fullName>malive__ReportDate__c</fullName>
    <label>Report Date</label>
    <type>Date</type>
</CustomField>