force-app/main/default/objects/malive__MALiveSummaryStateMileage__c/fields/malive__TollRoadDistanceKm__c.field-meta.xml
<CustomField>
    <fullName>malive__TollRoadDistanceKm__c</fullName>
    <label>Toll Road Distance (km)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>