force-app/main/default/objects/malive__MALiveSummaryStateMileage__c/fields/malive__TollRoadDistanceMiles__c.field-meta.xml
<CustomField>
    <fullName>malive__TollRoadDistanceMiles__c</fullName>
    <label>Toll Road Distance (mi)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>