force-app/main/default/objects/malive__MALiveSummaryStateMileage__c/fields/malive__TotalDistanceTraveledMiles__c.field-meta.xml
<CustomField>
    <fullName>malive__TotalDistanceTraveledMiles__c</fullName>
    <label>Total Distance Traveled (mi)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>